<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <!-- +++++++++++++++   Avatar ++++++++++++++++++  -->

    <!-- +++++++++++++++   Zona Estatura ++++++++++++++++++  -->
    <ImageView
            android:layout_width="166dp"
            android:layout_height="125dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:srcCompat="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etEstatura" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            android:hint="@string/especificacionEstatura"
            app:layout_constraintTop_toBottomOf="@+id/tvEstatura"/>

    <!-- +++++++++++++++   Zona Peso   ++++++++++++++++++  -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPeso" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/peso"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/etEstatura"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/especificacionPeso"
            android:id="@+id/etPeso" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPeso"/>

    <!-- +++++++++++++++   Boton   ++++++++++++++++++  -->
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/btnCalcularIMC"
            android:id="@+id/btnCalcular" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/etPeso"/>

    <!-- +++++++++++++++   Zona Resultado ++++++++++++++++++  -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultado" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text=""
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btnCalcular"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVeredicto"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/tvResultado" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/estatura"
            android:id="@+id/tvEstatura" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
</androidx.constraintlayout.widget.ConstraintLayout>